plugins {
    id 'java'
    id 'maven-publish'
    id 'signing'
}

group = 'org.tindalos.guardrails'
version = '0.38-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven {
        url 'https://oss.sonatype.org/content/repositories/releases/'
    }
}

dependencies {
    // Maven Plugin API (if still needed for plugin development)
    implementation 'org.apache.maven:maven-plugin-api:3.1.0'
    compileOnly 'org.apache.maven.plugin-tools:maven-plugin-annotations:3.2'

    // JDepend - source: https://github.com/nidi3/jdepend
    implementation 'guru.nidi:jdepend:2.9.5'

    // Testing
    testImplementation platform('org.junit:junit-bom:5.14.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Utilities
    implementation 'com.google.guava:guava:14.0.1'
    implementation 'org.apache.commons:commons-lang3:3.1'
    implementation 'org.apache.commons:commons-io:1.3.2'
    implementation 'org.json:json:20090211'
    implementation('com.googlecode.json-simple:json-simple:1.1.1') {
        // Avoid leaking JUnit 4.10 onto the main module path via json-simple.
        exclude group: 'junit', module: 'junit'
    }
    implementation 'org.yaml:snakeyaml:1.5'
    implementation 'org.specs2:classycle:1.4.1'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:unchecked'
    options.compilerArgs << '-Xlint:deprecation'
}

tasks.named('compileJava', JavaCompile) {
    doFirst {
        // Compile main sources as a named JPMS module while keeping tests on the classpath.
        options.compilerArgs += ['--module-path', configurations.compileClasspath.asPath]
        classpath = files()
    }
}

// Jar configuration
jar {
    manifest {
        attributes(
            'Implementation-Title': 'Principle',
            'Implementation-Version': project.version,
            'Implementation-Vendor': 'Tindalos',
            'Built-By': System.getProperty('user.name'),
            'Built-Date': new Date(),
            'Build-Jdk': JavaVersion.current()
        )
    }
}

tasks.named('compileTestJava') {
    modularity.inferModulePath = false
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
    test {
        java {
            srcDirs = ['src/test/java']
        }
    }
}


// Custom task to run guardrails checks (if applicable)
task guardrailsCheck {
    group = 'verification'
    description = 'Run guardrails architecture checks'
    doLast {
        println 'Guardrails checks would run here - configure based on your needs'
    }
}

// Make guardrailsCheck run after compile
compileJava.finalizedBy guardrailsCheck

// Publishing configuration
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            pom {
                name = 'Principle Maven Plugin'
                description = 'Architecture analysis and enforcement tool'
                url = 'https://github.com/matemagyari/principle'

                licenses {
                    license {
                        name = 'The Apache Software License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                        distribution = 'repo'
                    }
                }

                developers {
                    developer {
                        id = 'mate.magyari'
                        name = 'Mate Magyari'
                        email = 'mate.magyari@gmail.com'
                    }
                }

                scm {
                    connection = 'scm:git:ssh://git@github.com/matemagyari/guardrails.git'
                    developerConnection = 'scm:git:ssh://git@github.com/matemagyari/guardrails.git'
                    url = 'https://github.com/matemagyari/principle'
                }
            }
        }
    }

    repositories {
        maven {
            def releasesRepoUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
            def snapshotsRepoUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl

            credentials {
                username = project.hasProperty('ossrhUsername') ? ossrhUsername : ''
                password = project.hasProperty('ossrhPassword') ? ossrhPassword : ''
            }
        }
    }
}

// Signing configuration (activated when signing.keyId is set)
signing {
    required { gradle.taskGraph.hasTask('publish') && project.hasProperty('signing.keyId') }
    sign publishing.publications.mavenJava
}

// Test configuration
test {
    modularity.inferModulePath = false
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

